[dependencies]
anyhow = "1.0"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.42.1"
tracing = "0.1.37"

[dependencies.caller-utils]
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
branch = "develop"
git = "https://github.com/hyperware-ai/hyperprocess-macro"

[dependencies.hyperware_app_common]
async-trait = "0.1.64"
branch = "develop"
git = "https://github.com/hyperware-ai/hyperprocess-macro"

[dependencies.hyperware_app_common.chrono]
features = ["serde"]
version = "0.4"

[dependencies.hyperware_app_common.uuid]
features = [
    "v4",
    "serde",
]
version = "1.4.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "hyper-mev"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
